# ai-nutritionist

./: .env.ai.template  .env.cache.example  .env.production  .env.template  .eslintrc.security.js  .gitignore  .pre-commit-config.yaml  .test_analytics.db  =2.16.0  =7.0.0  AGENTS.md  AI_CONTEXT_ALIGNMENT.md  AI_OPTIMIZATION_SUMMARY.md  API_GUIDE.md  AWS_SMS_DEPLOYMENT_GUIDE.md  AWS_WHATSAPP_MIGRATION_PLAN.md  BUSINESS_STRATEGY.md  CHANGELOG.md  CLEANUP_STATUS.md  CODEBASE_AUDIT.md  COMPILATION_FIXES.md  CONTRIBUTING.md  COST_OPTIMIZATION_SUMMARY.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  Dockerfile.test  GUARANTEED_PROFIT_FINAL.md  GUARANTEED_PROFIT_IMPLEMENTATION.md  GUARANTEED_PROFIT_SYSTEM.md  IMPORT_MIGRATION_SUMMARY.md  IMPROVEMENTS_COMPLETE.md  INTERNATIONAL_PHONE_SETUP.md  INTERNATIONAL_READY.md  INTERVIEW_GUIDE.md  LICENSE  LOCAL_TESTING.md  MESSAGING_ARCHITECTURE.md  MULTI_GOAL_IMPLEMENTATION_SUMMARY.md  (+65 more)
.codex/: README.md  project_context.toml  quick_reference.md  templates.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: ai_improvement.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: build-test.yml  ci.yml  contract-testing.yml  deployment.yml  docs.yml  pr-validation.yml  production-deploy.yml  release.yml  security.yml
apps/mobile/: README.md  app.json  babel.config.js  detox.config.js  eslint.config.mjs  index.ts  jest.config.cjs  jest.setup.ts  metro.config.js  package.json  tsconfig.json
apps/web/: package.json  tsconfig.json
dev-tools/: README.md  dev-cli.py  validate_tools.py
dev-tools/debugging/: request_replay.py
dev-tools/docs/: api_docs_generator.py
dev-tools/generators/: __init__.py  comprehensive_test_generator.py  entity_generator.py  migration_generator.py  repository_generator.py  service_generator.py  test_generator.py
dev-tools/scripts/: seed_database.py  setup_environment.py
docs/: API.md  ARCHITECTURE.md  CONSOLIDATED_AI_NUTRITION_SERVICE.md  COST_PROTECTION_SETUP.md  GLOBAL_DEPLOYMENT_GUIDE.md  GO_TO_PRODUCTION.md  MONETIZATION.md  MONITORING_USAGE_GUIDE.md  MULTI_GOAL_EXAMPLES.md  PERSONALIZATION.md  PHASE_3B_AI_CONSOLIDATION_COMPLETE.md  PRIVACY.md  README.md  README.principal-engineer-prompts.md  SCRIPT_CLEANUP_SUMMARY.md  SETUP.md  TRACK_F_ANALYTICS_IMPLEMENTATION.md  architecture-diagram.mmd  index.md
docs/api/: README.md  openapi.yaml
docs/api-reference/: README.md  authentication.md  rate-limiting.md  webhooks.md
docs/getting-started/: quick-start.md
examples/: README.md  api_logging_example.py  caching_integration_examples.py  cloudwatch_integration_example.py  deployment_config.py  domain_service_logging_example.py  health_check_examples.py  infrastructure_logging_example.py  optimized_database_usage.py  rate_limiting_examples.py
examples/feature-flags/: admin_interface.py  basic_usage.py  fastapi_integration.py  launchdarkly_config.py  meal_planning_integration.py
infrastructure/: CLEANUP_SUMMARY.md  TERRAFORM_INFRASTRUCTURE_COMPLETE.md  env.json  template-minimal.yaml  template.yaml
infrastructure/monitoring/: README.md  alerting.tf  cloudwatch.tf  dashboards.tf  dashboards_simple.tf  variables.tf
infrastructure/terraform/: README.md  access_control_simple.tf  api_gateway.tf  auto_scaling_cost_optimization.tf  aws_sms.tf  backup.tf  conversation.tf  cost-optimization.tfvars.example  cost-protection.tfvars.example  cost_monitoring_dashboard.tf  cost_optimization.tf  cost_optimization_variables.tf  cost_protection_simple.tf  cost_protection_variables.tf  deploy.ps1  deploy.sh  dynamodb.tf  dynamodb_fixed.tf  elasticache.tf  global_iam.tf  global_services.tf  global_variables.tf  iam.tf  kms.tf  lambda.tf  main-root.tf  main.tf  monitoring.tf  monitoring_twilio.tf  outputs-root.tf  outputs.tf  s3_cloudfront.tf  security.tf  spam_protection.tf  sqs.tf  terraform.tfvars.example  variables-root.tf  variables.tf  vpc.tf
k8s/: README.md  deploy.sh  validate.sh
k8s/base/: configmaps.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  scaling-policies.yaml  secrets.yaml
k8s/istio/: README.md  SERVICE_MESH_IMPLEMENTATION_SUMMARY.md  deploy-service-mesh.sh  istio-config.yaml  observability-complete.yaml  security-policies-enhanced.yaml  security-policies.yaml  service-mesh-complete.yaml  traffic-management-advanced.yaml
k8s/monitoring/: jaeger.yaml  prometheus-grafana.yaml
k8s/security/: pod-security-policies.yaml
migrations/: README.md  __init__.py  __main__.py  alembic.ini  env.py  migration_engine.py  test_setup.py  version_control.py
migrations/strategies/: __init__.py  blue_green.py  data_backfilling.py  gradual_evolution.py  zero_downtime.py
migrations/versions/: 20241014_143000_create_user_analytics_table.py  (+2 more)
performance/: README.md  locustfile.py
scripts/: backup_automation.py  backup_cost_optimization.py  backup_validation.py  calculate-aws-costs.py  check_performance_regression.py  contract_testing_ci.py  cost_optimization_calculator.py  deploy_cost_optimization.sh  deploy_monitoring.sh  generate_security_report.py  generate_test_report.py  health_check.py  recovery_testing.py  setup_rate_limiting.py  test_monitoring.py  test_rate_limiting.py  validate-production-readiness.sh
src/: __init__.py  migration_mapping.py
src/adapters/: __init__.py  (+3 more)
tests/: README.md  conftest.py  container-structure-test.yaml  test_ai_config_simple.py  test_ai_performance.py  test_ai_service.py  test_community_features.py  test_community_opt_flows.py  test_comprehensive_caching.py  test_comprehensive_validation.py  test_consolidated_ai_nutrition_service.py  test_conversational_nutritionist.py  test_cost_logic.py  test_cost_optimization.py  test_edamam_basic.py  test_edamam_integration.py  test_fixtures_basic.py  test_fixtures_integration.py  test_hexagonal_architecture.py  test_monitoring_integration.py  test_multi_user_privacy.py  test_project_validation.py  test_runner_comprehensive.py  test_subscription_service.py
tools/: pivot_cleanup.py  validate_architecture.py  validate_database_optimization.py
(+501 files in other folders)
